# skillissuegg

./: .gitignore  Anchor.toml  README.md  package.json
.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
.anchor/test-ledger/rocksdb/: 000056.sst  000057.sst  000058.sst  000059.sst  000060.sst  000061.sst  IDENTITY  LOG  LOG.old.1717810370856441  MANIFEST-000063  OPTIONS-000069  OPTIONS-000071
app/: errors.ts  idl.json  package-lock.json  package.json
app/components/: AppBar.tsx  Increment.tsx  Initialize.tsx  TicTacToe.tsx  WalletContextProvider.tsx  pong.tsx
app/pages/: index.tsx  pong-old.tsx  pong.tsx
app/pages/api/: socketHandler.ts
app/public/dodge-the-creeps/: dodge-the-creeps.apple-touch-icon.png.import  dodge-the-creeps.html  dodge-the-creeps.icon.png.import  dodge-the-creeps.pck  dodge-the-creeps.png.import
app/server/: pongServer.tsx
app/styles/: globals.css
programs/anchor_counter/: Cargo.toml
programs/anchor_counter/src/: lib.rs
programs/tictactoe/: Cargo.toml
programs/tictactoe/src/: errors.rs  lib.rs
programs/tictactoe/src/instructions/: bet.rs  end_game.rs  mod.rs  play.rs  setup_game.rs
programs/tictactoe/src/state/: game.rs
tests/: anchor_counter.ts  test_helpers.ts  tictactoe.ts
